useful DOM traversings functions

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="input-wrapper" data-id="one">
+    <div class="app-brother"></div>
+    <input type="text" id="app" />
+    <ul>
+      <li class="sistaa">1</li>
+      <li class="sistaa">2</li>
+      <li class="sistaa">3</li>
+      <li class="sistaa">4</li>
+      <li class="sistaa">5</li>
+    </ul>
+  </div>
 </body>
 
 </html>
